--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,52 +1,55 @@
 security:
-    password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: auto
+  password_hashers:
+    # Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: auto
+    Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+      algorithm: auto
+      cost: 15
 
-    providers:
-        app_user_provider:
-            entity:
-                class: App\Entity\User
-                property: email
+  providers:
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: email
 
-    firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+  firewalls:
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
 
-        main:
-            pattern: ^/
-            provider: app_user_provider
-            form_login:
-                login_path: app_login
-                check_path: /login
-                username_parameter: email
-                password_parameter: password
-                default_target_path: /users
-            security: false
+    main:
+      pattern: ^/
+      provider: app_user_provider
+      form_login:
+        login_path: app_login
+        check_path: /login
+        default_target_path: /users
+      logout:
+        path: /logout
 
-        # api_login:
-        #     pattern: ^/api/login
-        #     stateless: true
-        #     json_login:
-        #         check_path: /api/login
-        #         success_handler: lexik_jwt_authentication.handler.authentication_success
-        #         failure_handler: lexik_jwt_authentication.handler.authentication_failure
+    # api_login:
+    #     pattern: ^/api/login
+    #     stateless: true
+    #     json_login:
+    #         check_path: /api/login
+    #         success_handler: lexik_jwt_authentication.handler.authentication_success
+    #         failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
-        # main:
-        #     lazy: true
-        #     provider: app_user_provider
-        #     form_login:
-        #         login_path: app_login
-        #         check_path: app_login
-        #         default_target_path: /
-        #     logout:
-        #         path: logout
-        #         target: /
-
-    access_control:
-        # - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        # - { path: ^/users/new, roles: PUBLIC_ACCESS }
-        # - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY } 
-        # - { path: ^/users, roles: PUBLIC_ACCESS}
+    # main:
+    #     lazy: true
+    #     provider: app_user_provider
+    #     form_login:
+    #         login_path: app_login
+    #         check_path: app_login
+    #         default_target_path: /
+    #     logout:
+    #         path: logout
+    #         target: /
 
 
+  access_control:
+    - { path: ^/login, roles: PUBLIC_ACCESS }
+    - { path: ^/logout, roles: PUBLIC_ACCESS }
+    # - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    # - { path: ^/users/new, roles: PUBLIC_ACCESS }
+    # - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    # - { path: ^/users, roles: PUBLIC_ACCESS}
